# sip-softphone

./: .gitignore  README.md
sip-server/: CMakeLists.txt
sip-server/include/net/: Datagram.hpp  Endpoint.hpp  UdpServer.hpp
sip-server/include/sip/: RequestLine.hpp
sip-server/include/util/: Logger.hpp
sip-server/src/: main.cpp
sip-server/src/net/: UdpServer.cpp
sip-server/src/sip/: RequestLine.cpp
